CMAKE_MINIMUM_REQUIRED(VERSION 2.8) #設定版本
PROJECT(slam) #設定工程名
SET(CMAKE_CXX_COMPILER "g++") #設定編譯器
SET(CMAKE_BUILD_TYPE Debug)
#設定可執行二進制文件的目錄
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#設定存放編譯出來的庫文件的目錄
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

#並且把該目錄設定爲鏈接目錄
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

#設定頭文件目錄
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

#增加子文件夾，也就是進入源代碼文件夾繼續構建
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)



